<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgrad">

    <Button
        android:id="@+id/homesetBtn"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/blueroundbtn"
        android:text="@string/homeBtnText"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/notifcheckBtn"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/roundbtn"
        android:gravity="center"
        android:text="@string/settingsNotifTxt"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toTopOf="@+id/bedsetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLbl"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/clearJournalsBtn"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/roundbtn"
        android:gravity="center"
        android:text="@string/settingsDeleteJournalTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toTopOf="@+id/clearStatsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearStatsBtn"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/roundbtn"
        android:gravity="center"
        android:text="@string/settingsDeleteStatsTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dimsetBtn"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/roundbtn"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/settingsDimTxt"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toTopOf="@+id/clearJournalsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bedsetBtn"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/roundbtn"
        android:gravity="center"
        android:text="@string/settingsBedTxt"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toTopOf="@+id/dimsetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/settingsLbl"
        android:layout_width="316dp"
        android:layout_height="62dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/settingsTitle"
        android:textColor="#4A9BFF"
        android:textSize="45sp"
        android:typeface="normal"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

</androidx.constraintlayout.widget.ConstraintLayout>