<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgrad"
    tools:context="com.example.auraia.SETTINGS.bedSettingsActivity">

    <TextView
        android:id="@+id/moodAvgTxt2"
        android:layout_width="274dp"
        android:layout_height="81dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="556dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:gravity="center"
        android:text="make sure you set both the bedtime and wakeup time when you change the times!!"
        android:textColor="#5B6168"
        android:textSize="12sp"
        android:typeface="normal"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/setWakeupBtn"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/blueroundbtn"
        android:text="set wakeup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setBedBtn" />

    <Button
        android:id="@+id/setBedBtn"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/blueroundbtn"
        android:text="set bedtime"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeBtnbed"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/blueroundbtn"
        android:text="@string/homeBtnText"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whitelistTxt3"
        android:layout_width="316dp"
        android:layout_height="62dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/bedtimeTitle"
        android:textColor="#4A9BFF"
        android:textSize="40sp"
        android:typeface="normal"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/bedTimeTxt"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@drawable/background_txt"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/sleepTxt"
        android:textColor="#317EDD"
        android:textSize="50sp"
        android:typeface="normal"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toTopOf="@+id/wakeTimeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/wakeTimeTxt"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/background_txt"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/wakeupTxt"
        android:textColor="#317EDD"
        android:textSize="50sp"
        android:typeface="normal"
        app:fontFamily="@font/reem_kufi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toEndOf="@+id/setWakeupBtn"
        app:layout_constraintTop_toBottomOf="@+id/whitelistTxt3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/notifsOnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="notifications on - "
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setWakeupBtn" />

    <TextView
        android:id="@+id/notifsOffTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="notifications off - "
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifsOnTxt" />

    <TextView
        android:id="@+id/filterOnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="screen filter on - "
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifsOffTxt" />

    <TextView
        android:id="@+id/filterOffTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="56dp"
        android:text="screen filter off - "
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>